--- a/code/FindHere/src/main/res/layout/add_activity.xml
+++ b/code/FindHere/src/main/res/layout/add_activity.xml
@@ -1,19 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baoman"
-        android:layout_weight="1"/>
+    android:orientation="vertical"
 
+    android:paddingBottom="16dp"
+    android:paddingTop="@dimen/activity_vertical_margin"
+
+    android:weightSum="1">
+
+    <RelativeLayout
+        android:layout_width="310dp"
+        android:layout_height="300dp"
+        android:background="#60FFFFFF"
+        android:gravity="center"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/relativeLayout">
     <EditText
         android:id="@+id/upload"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="250dp"
+        android:maxLines="5"
         android:hint="@string/prompt_upload"
-        android:layout_weight="1" />
-</LinearLayout>
+     />
+
+    <ImageButton
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:src="@drawable/save"
+        android:background="@android:color/transparent"
+        android:layout_below="@+id/upload"
+        android:layout_alignRight="@+id/upload"/>
+
+    <ImageButton
+        android:id="@+id/save"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:scaleType="fitXY"
+        android:layout_marginLeft="8dp"
+        android:src="@drawable/expression"
+        android:layout_below="@+id/upload"
+        android:background="@android:color/transparent"
+        />
+    </RelativeLayout>
+
+    <ImageButton
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:src="@drawable/back_b"
+        android:scaleType="fitXY"
+        android:background="@android:color/transparent"
+
+        android:id="@+id/back"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="8dp"/>
+</RelativeLayout>
