--- a/code/FindHere/src/main/res/values/colors.xml
+++ b/code/FindHere/src/main/res/values/colors.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="light_blue">#3ddef2</color>
+
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#575757</color>
     <color name="light_gray">#D3D3D3</color>
     <color name="semi_transparent_black">#C8000000</color>
-    <color name="soft_blue">#67cfe2</color>
+
+    <color name="light_blue">#52eeff</color>
+    <color name="soft_blue">#84d4e5</color>
+    <color name="grey_blue">#dadfe3</color>
 </resources>
