--- a/code/FindHere/src/main/res/layout/login_activity.xml
+++ b/code/FindHere/src/main/res/layout/login_activity.xml
@@ -43,7 +43,7 @@
             android:layout_height="400dp"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
-            android:layout_marginTop="100dp">
+            android:layout_marginTop="80dp">
 
 
             <ImageView
@@ -82,26 +82,26 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
                 <Button
-                    android:id="@+id/email_register_button"
-                    android:layout_width="100dp"
+                    android:id="@+id/email_sign_in_button"
+                    android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="20dp"
-                    android:text="@string/title_activity_register"
-                    android:gravity="center"
+                    android:text="@string/title_activity_login"
+                    android:layout_gravity="center"
                     android:textColor="@color/white"
                     android:background="@drawable/shape_handin"
                     android:textSize="16dp"
                     android:textStyle="italic" />
                 <Button
-                    android:id="@+id/email_sign_in_button"
-                    android:layout_width="100dp"
+                    android:id="@+id/email_register_button"
+                    android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="50dp"
-                    android:text="@string/title_activity_login"
-                    android:gravity="center"
+                    android:text="@string/title_activity_register"
+                    android:layout_gravity="center"
                     android:textColor="@color/white"
                     android:background="@drawable/shape_handin"
                     android:textSize="16dp"
